# OpenSpaceCharge

./: CMakeLists.txt  README.md  serial_CMakeLists.txt  xyz.f90
OpticsJan2020/MLI_light_optics/: 00readme
OpticsJan2020/MLI_light_optics/Includes/: actpar.inc  aimdef.inc  amdiip.inc  bfield.inc  buffer.inc  codes.inc  combs.inc  const.inc  copy_of_stubs.inc  core.inc  core_old.inc  deriv.inc  dip.inc  dr.inc  drl.inc  ebdata.inc  expon.inc  extalk.inc  files.inc  fitbuf.inc  fitdat.inc  frnt.inc  gronax.inc  hmflag.inc  id.inc  impli.inc  incmif.inc  ind.inc  ind3.inc  infin.inc  iprod.inc  ja3.inc  keyset.inc  labpnt.inc  len.inc  len3.inc  lims.inc  linbuf.inc  loop.inc  map.inc  (+42 more)
OpticsJan2020/MLI_light_optics/Makedir/: makefile
OpticsJan2020/MLI_light_optics/Src/: afro.f  afro_mod.f90  anal.f  base.f  bessjm.f  book.f  boundp3d.f  cfbdang.f  cfqd.f  coil.f  comm.f  cons.f  constants_mod.f90  curve_fit.f90  depositrho.f  diagnostics.f  dist.f  dummy.f  dumpin.f  e_gengrad_mod.f  ebcomp.f  elem.f  env.f  euclid.f  fftessl.f  fftpkgq.f  fftw_dummy.f  fparser.f90  gendip5.f  gengrad_mod.f  genm.f  gensol.f  greenfn_mod.f90  hamdrift.f  imkmpak.f  inpu.f  integ.f  iron.f  liea.f  liea_mod.f90  (+39 more)
code/: data_movement_mod.f90  decomposer.f90  decomposition_mod.f90  deposition_mod.f90  fft_interface_mod.f90  fft_mod.f90  numerical_distributions_mod.f90  open_spacecharge_core_mod.f90  open_spacecharge_mod.f90  test_mod.f90  test_opensc.f90  test_program.f90
code/fft/: fft_3d_f.c
code_mpi/fft/: remap_3d.c
examples/: benchmark.ipynb  params.in  test.in
mpi_devel/: CMakeLists.txt
mpi_devel/code/: data_movement_mod.f90  decomposition_mod.f90  deposition_mod.f90
mpi_devel/code/fft/: fft_3d.c  remap_3d_f.c
serial_code/: CMakeLists.txt  test_opensc.f90
serial_code/code/: fast_fourier_am.f90  fft_interface_mod.f90  open_spacecharge_mod.f90  open_spacecharge_mod1.f90  test_mod.f90  test_opensc.f90  test_opensc1.f90
